# random_tables_web

./: .env  .gitignore  Cargo.toml  README.md  account.html  edit_account.html  index.html  user.html
_includes/: footer.html  links.html  navbar.html  test.html  test1.html
_layout/: base.html  default.html
frontend/: .eslintcache  package.json
frontend/src/: Account.js  App.js  BackendURLBuilder.js  ChangePassword.js  CookieForm.js  CreateAccount.js  EditAccount.js  Home.js  LoginForm.js  TableList.js  auth.js  index.js
migrations/2021-01-16-193848_create_accounts/: up.sql
migrations/2021-01-16-194146_create_tables/: down.sql  up.sql
migrations/2021-01-16-200201_create_sessions/: down.sql  up.sql
script/: create_database.psql  delete_database.psql
src/: authentication.rs  data.rs  database_handler.rs  lib.rs  main.rs  schema.rs  session.rs  templating.rs
src/data/: account.rs  random_table.rs
src/templating/: page_template.rs
static/: style.css
test/files/basic/: valid.txt
