[package]
name = "random_tables_web"
version = "0.1.0"
authors = ["Dominik Lameter <dominik@lameter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
liquid = "0.20"
postgres = "0.18.1"
