[package]
name = "random_tables_web"
version = "0.1.0"
authors = ["Dominik Lameter <dominik@lameter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
liquid = "0.20"
postgres = "0.18.1"
config = "0.10.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"